--- a/angelschein.html
+++ b/angelschein.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Angel-Quiz: Drag & Drop</title>
+  <title>Angelschein - Rutenbau Simulator</title>
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
   <style>
     body {
@@ -63,10 +63,10 @@
   </style>
 </head>
 <body>
-<h2>Angel-Quiz: Drag & Drop</h2>
+<h2>Angelschein - Rutenbau Simulator</h2>
 
 <div class="questions" id="question-buttons"></div>
-<div id="question-title" class="question-title">Bitte wähle eine Frage aus.</div>
+<div id="question-title" class="question-title">Bitte wähle eine Frage aus.<br/><br/>Hinweis: Es gibt nur 1 richtige Reihenfolge. Wenn sinnvoll Stabhackenlöser und Löseschere zu nehmen sollen beide genommen werden.<br/></div>
 <div id="categories-container"></div>
 <button class="check" onclick="checkOrder()">Überprüfen</button>
 
@@ -184,7 +184,7 @@
       title: "Rute 5 - Hecht",
       sequence: [
         "Blau 2-teilig 2,4m WG 40gr",
-        "Grosse Rolle 11,3kg",
+        "Große Rolle 11,3kg",
         "Großer Wirbel (schwarz)",
         "Stahlvorfach 12 Kg",
         "Großer Blinker",
@@ -197,7 +197,7 @@
       ],
       categories: {
         Rute: ["Blau 2-teilig 2,4m WG 40gr"],
-        Rolle: ["Grosse Rolle 11,3kg"],
+        Rolle: ["Große Rolle 11,3kg"],
         Montage: ["Großer Wirbel (schwarz)", "Stahlvorfach 12 Kg"],
         Köder: ["Großer Blinker"],
         Zubehör: ["Unterfangnetz", "Metermaß", "Schlagholz", "Messer", "Rachersperre", "Lösezange"]
@@ -272,7 +272,7 @@
       title: "Rute 9 - Dorsch",
       sequence: [
         "Blau 2-teilig 2,7m WG 250gr",
-        "Grosse Rolle 19,4kg",
+        "Große Rolle 19,4kg",
         "Großer Wirbel (silber)",
         "Pilker",
         "Gaff",
@@ -283,7 +283,7 @@
       ],
       categories: {
         Rute: ["Blau 2-teilig 2,7m WG 250gr"],
-        Rolle: ["Grosse Rolle 19,4kg"],
+        Rolle: ["Große Rolle 19,4kg"],
         Montage: ["Großer Wirbel (silber)"],
         Köder: ["Pilker"],
         Zubehör: ["Gaff", "Metermaß", "Schlagholz", "Messer", "Lösezange"]
@@ -293,7 +293,7 @@
       title: "Rute 10 - Brandungsrute",
       sequence: [
         "Blau 3-teilig >=3,5m WG >100gr",
-        "Grosse Rolle mit Schlagschnur 14 Kg",
+        "Große Rolle mit Schlagschnur 14 Kg",
         "Großer Wirbel (silber)",
         "Brandungsvorfach",
         "Sehr schwere Blei",
@@ -305,7 +305,7 @@
       ],
       categories: {
         Rute: ["Blau 3-teilig >=3,5m WG >100gr"],
-        Rolle: ["Grosse Rolle mit Schlagschnur 14 Kg"],
+        Rolle: ["Große Rolle mit Schlagschnur 14 Kg"],
         Montage: ["Großer Wirbel (silber)", "Brandungsvorfach", "Sehr schwere Blei"],
         Köder: ["Wattwurm"],
         Zubehör: ["Metermaß", "Schlagholz", "Messer", "Lösezange"]
