--- a/angelschein.html
+++ b/angelschein.html
@@ -132,10 +132,10 @@
         "Grüne Teleskoprute \"Cyprio\" 3,6m WG 60gr",
         "Große Rolle 11,3kg",
         "Stopper",
-        "Perle",
-        "Große Pose ~7.5 (Laufpose)",
+        "Perle-1",
+        "Große Pose ~7.5gr (Laufpose)",
         "Große Kugelblei",
-        "Perle",
+        "Perle-2",
         "Großer Wirbel (schwarz)",
         "Hacken Nr. <= 6",
         "Kartoffeln",
@@ -149,7 +149,7 @@
       categories: {
         Rute: ["Grüne Teleskoprute \"Cyprio\" 3,6m WG 60gr"],
         Rolle: ["Große Rolle 11,3kg"],
-        Montage: ["Stopper", "Perle", "Große Pose ~7.5 (Laufpose)", "Große Kugelblei", "Perle", "Großer Wirbel (schwarz)", "Hacken Nr. <= 6"],
+        Montage: ["Stopper", "Perle-1", "Große Pose ~7.5gr (Laufpose)", "Große Kugelblei", "Perle-2", "Großer Wirbel (schwarz)", "Hacken Nr. <= 6"],
         Köder: ["Kartoffeln"],
         Zubehör: ["Unterfangnetz", "Metermaß", "Schlagholz", "Messer", "Stabhackenlöser", "Lösezange"]
       }
@@ -160,7 +160,7 @@
         "Blau 2-teilig 2,7m WG 60gr",
         "Große Rolle 11,3kg",
         "Sargblei 60gr",
-        "Perle",
+        "Perle-1",
         "Stopper",
         "Großer Wirbel (schwarz)",
         "Hacken Nr. <= 6",
@@ -175,7 +175,7 @@
       categories: {
         Rute: ["Blau 2-teilig 2,7m WG 60gr"],
         Rolle: ["Große Rolle 11,3kg"],
-        Montage: ["Sargblei 60gr", "Perle", "Stopper", "Großer Wirbel (schwarz)", "Hacken Nr. <= 6"],
+        Montage: ["Sargblei 60gr", "Perle-1", "Stopper", "Großer Wirbel (schwarz)", "Hacken Nr. <= 6"],
         Köder: ["Tauwurm"],
         Zubehör: ["Unterfangnetz", "Metermaß", "Schlagholz", "Messer", "Stabhackenlöser", "Lösezange"]
       }
